fixed layout issues

--- a/src/gradient_overlay.css
+++ b/src/gradient_overlay.css
@@ -5,7 +5,8 @@
           linear-gradient(to top, rgba(0, 28, 48, 1), rgba(0, 0, 0, 0) 10%);
 } */
 
-.overlay {
+/* overlay left right bottom */
+.overlay-lrb {
      background:
           linear-gradient(to right, rgba(0, 28, 48, 1), rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0) 75%, rgba(0, 28, 48, 1)),
           linear-gradient(to top, rgba(0, 28, 48, 1), rgba(0, 0, 0, 0) 25%);
